src/test/ui/error-codes/E0244.stderr
error[E0244]: wrong number of type arguments: expected 0, found 2
  --> $DIR/E0244.rs:12:23
   |
12 | struct Bar<S, T> { x: Foo<S, T> }
   |                       ^^^^^^^^^ expected no type arguments

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0244"
